@@ -44,6 +44,8 @@ struct _SapwoodRcStyle
   GtkRcStyle parent_instance;
 
   GList *img_list;
+  guint has_shadow : 1;
+  GdkColor shadowcolor;
 };
 
 struct _SapwoodRcStyleClass
